# friendzy-clients

./: .gitignore  Cargo.toml  README.md  package.json
crates/friendzy-client/: Cargo.toml
crates/friendzy-client/examples/: buy.rs
crates/friendzy-client/src/: instructions.rs  lib.rs
friendzy-client/: Cargo.toml
friendzy-client/src/: instructions.rs  lib.rs  pda.rs  state.rs
