[package]
name = "friendzy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]

[dependencies]
anchor-spl = "0.28.0"
anchor-lang = "0.28.0"

solana-client = "~1.16.0"
solana-program = "~1.16.0"
solana-program-test = "~1.16.0"

mpl-token-metadata = { version = "2.0.0-beta.1" }

# extra 
base64 = "0.21.4"