[package]
name = "friendzy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]

[dependencies]
anchor-spl = "0.28.0"
anchor-lang = "0.28.0"
mpl-token-metadata = { version = "2.0.0-beta.1" }

[dev-dependencies]
base64 = "0.21.4"
solana-client = "<1.17"
solana-sdk = "<1.17"
spl-associated-token-account = "1.1.3"
tokio = "1.14.1"